Updated timelines and CSS

--- a/pages/history.html
+++ b/pages/history.html
@@ -69,44 +69,53 @@
     <!-- End of alert section-->
 
     <!-- Parent Container-->
-    <div class="container-lg py-5">
+    <div class="container-fluid py-5">
       <div class="row">
 
-            <div class="col-lg-3 card">
-                <img src="#" class= "card-img-top" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Timeline</h5>
-                    <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
-                    <a href="history/timeline.html" class="btn btn-primary">Visit Timeline</a>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img src="#" class= "card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Timeline</h5>
+                        <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
+                        <a href="history/timeline.html" class="btn btn-primary">Visit Timeline</a>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-lg-3 card">
-                <img src="#" class= "card-img-top" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Articles</h5>
-                    <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
-                    <a href="#" class="btn btn-primary">Visit Timeline</a>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img src="#" class= "card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">CVRR</h5>
+                        <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
+                        <a href="history/timeline.html" class="btn btn-primary">Ride the CVRR</a>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-lg-3 card">
-                <img src="#" class= "card-img-top" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Maps</h5>
-                    <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
-                    <a href="#" class="btn btn-primary">Visit Timeline</a>
+            <div class="col-lg-3">
+                <div class="card">
+                    <img src="#" class= "card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Articles</h5>
+                        <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
+                        <a href="history/timeline.html" class="btn btn-primary">Read Articles</a>
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-3 card">
-                <img src="#" class= "card-img-top" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">CVRR</h5>
-                    <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
-                    <a href="#" class="btn btn-primary">Visit Timeline</a>
+
+            <div class="col-lg-3">
+                <div class="card">
+                    <img src="#" class= "card-img-top" alt="">
+                    <div class="card-body">
+                        <h5 class="card-title">Maps</h5>
+                        <p class="card-text">Text Text Text Text Text Text Text Text Text</p>
+                        <a href="history/timeline.html" class="btn btn-primary">See Maps</a>
+                    </div>
                 </div>
             </div>
-      </div>
+        </div>
     </div>
     
     <!-- Footer -->
