--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <footer class="align-bottom my-5">
         <div class="footer-class py-4">
             <div class="row">
-                <div class="col-lg-7 py-2 offset-lg-1">
+                <div class="col-lg-7 py-2 order-lg-2 offset-lg-1">
                     <p class="footer-text col-lg-6">
                       The Mechanicsburg Museum Association was founded in 1975 in a 
                       community effort to preserve the Stationmaster’s House, a 
@@ -166,7 +166,7 @@
                 </div>
 
                 <div class="col-lg-4 order-lg-2 py-2">
-                    <p class="footer-text">
+                    <p class="footer-text col-lg-8">
                     Mechanicsburg Museum Association
                     <br>
                     2 W Strawberry Alley
