CVRR page completed

--- a/pages/cvrr.html
+++ b/pages/cvrr.html
@@ -87,8 +87,232 @@
     <div class="container-xl py-2">
 
         <!--Please insert content here ONLY!-->
+        <h2 class="text-center py-5">~ THE CUMBERLAND VALLEY RAILROAD & MECHANICSBURG ~</h2>
 
-    </div>
+        <div class="row py-4 mx-auto">
+            <div class="col-lg-12">
+                <div class="figure">
+                    <a href="../images/cvrr/pioneer_combo.jpg">
+                        <img src="../images/cvrr/pioneer_combo.jpg" alt="Pioneer Combo" title="Pioneer & Combo Car">
+                    </a>
+                    <figcaption><i>Pioneer & Combo Car</i></figcaption>
+                </div>
+            </div>
+        </div>
+
+        <p class="paragraph-text">April 2, 1831, the Pennsylvania Assembly passed an act to incorporate the Cumberland Valley Railroad, 
+            to run between Carlisle and Bridgeport (now Lemoyne). This was among the first railroad charters in the 
+            country. The company failed to raise the necessary capital, and was dormant until 1835. April 10, 1835, 
+            the charter was revised to run between Chambersburg and Bridgeport. Pennsylvania was the bread basket 
+            of the nation at the time, and including most of the Cumberland Valley piqued the interest of 
+            Philadelphia merchants, hoping to divert grain, whiskey, and iron shipments from Baltimore to 
+            Philadelphia. Their support helped raise enough capital to begin construction, and August 19, 1837, 
+            the first excursion was run from Carlisle to White Hill, with horse drawn transportation across the 
+            Market Street Bridge to Harrisburg. By the end of 1837, the line was completed between Bridgeport and 
+            Chambersburg, home of corporate headquarters and primary maintenance facilities. Mechanicsburg had a 
+            fuel wood and water stop from the beginning, probably on the property where the freight station is now.
+        </p>
+        
+        <div class="row py-4">
+            <div class="offset-2 offset-sm-1 col-sm-4 offset-lg-2 col-lg-3">
+                <div class="figure">
+                    <a href="../images/cvrr/Lafayette_web.jpg">
+                        <img src="../images/cvrr/Lafayette_web.jpg" alt="Lafayette, sister to the first CVRR loco" title="Lafayette, sister to the first CVRR loco">
+                    </a>
+                    <figcaption><i>Lafayette, sister to the first CVRR loco</i></figcaption>
+                </div>
+            </div>
+            <div class="offset-1 offset-sm-1 col-sm-4 offset-lg-2 col-lg-3 py-2">
+                <div class="figure">
+                    <a href="../images/cvrr/IMG_0007.jpg">
+                        <img src="../images/cvrr/IMG_0007.jpg" alt="#30 D7 @ White Hill" title="#30 D7 @ White Hill">
+                    </a>
+                    <figcaption><i>Lafayette, sister to the first CVRR loco</i></figcaption>
+                </div>
+            </div>
+        </div>
+
+        <p class="paragraph-text">
+            The bridge to Harrisburg, delayed by a national financial collapse in 1837, was opened January 16, 1839. 
+            h connections to two other lines, this allowed rail travel through Lancaster to Philadelphia. 
+            At this time, the favorite passenger route from Philadelphia to Pittsburgh became the railroads to 
+            Chambersburg, and stage coach from there to Pittsburgh. As the evening stage coach from Pittsburgh to 
+            Chambersburg arrived about midnight, the train to Harrisburg left about 1:00 AM. The CVRR converted a 
+            passenger car to folding sleeping berths, inventing what is believed to be the first sleeping car. 
+            It was popular enough to build a second sleeping car. When the Pennsylvania Railroad neared Pittsburgh 
+            in the 1850s, the stage coach to Chambersburg became obsolete, as did the sleeping cars.
+        </p>
+
+        <p class="paragraph-text">
+            In 1844, the bridge to Harrisburg caught fire from a locomotive spark, and was destroyed, 
+            threatening the fledgling railroad with bankruptcy. The Pennsylvania Assembly donated its stock, 
+            worth several thousand dollars, to rebuild the bridge. In fear of another fire, locomotives were banned 
+            from the bridge. Gravity moved cars downhill from Bridgeport to Harrisburg, and horses or mules were 
+            used the other direction. Eventually, traffic became heavy enough that a specially designed locomotive, 
+            Utility, was purchased for bridge duty.
+        </p>
+
+        <div class="row py-4 mx-auto">
+            <div class="mx-auto">
+                <div class="figure">
+                    <a href="../images/cvrr/IMG_0004.jpg">
+                        <img src="../images/cvrr/IMG_0004.jpg" alt="#62 H2" title="#62 H2">
+                    </a>
+                    <figcaption><i>#62 H2</i></figcaption>
+                </div>
+            </div>
+        </div>
+
+        <p class="paragraph-text">
+            While the CVRR was licensed as a freight forwarder from the beginning, they had no capital to spend on 
+            freight cars. All freight was handled by independent freight forwarders, with their own "burthen cars" 
+            operating from their warehouses. Each car or group of cars had its own conductor employed by the 
+            forwarders to supervise loading and unloading. Early passenger ticketing was also handled by some of the 
+            forwarders, across different lines and forms of transportation, as forerunners of the modern travel 
+            agents.
+        </p>
+
+        <p class="paragraph-text">
+            In 1859, the Pennsylvania Railroad bought controlling interest in the CVRR. This was done to prevent 
+            the Reading Railroad from partnering with the CVRR to connect with the B&O, and thus providing 
+            undesirable competition for the PRR. CVRR management remained in place, with the addition of PRR members 
+            to the board of directors.
+        </p>
+
+        <div class="row py-4 mx-auto">
+            <div class="mx-auto">
+                <div class="figure">
+                    <a href="../images/cvrr/complex3a.jpg">
+                        <img src="../images/cvrr/complex3a.jpg" alt="MMA complex" title="MMA complex">
+                    </a>
+                    <figcaption><i>MMA complex</i></figcaption>
+                </div>
+            </div>
+        </div>
+
+        <p class="paragraph-text">
+            The Franklin Railroad was another early railroad, built from Chambersburg to Hagerstown, Maryland. 
+            Beset with financial difficulties from the beginning, it was acquired and rebuilt by the CVRR before 
+            the Civil War. During the Civil War, tens of thousands of federal troops traveled from Harrisburg to 
+            Hagerstown on the CVRR. From there, they marched into the Shenandoah Valley of Virginia. Many trainloads 
+            of supplies followed them.
+        </p>
+
+        <p class="paragraph-text">
+            During the war, Pennsylvania was invaded three times. In 1862, Confederate cavalry destroyed CVRR 
+            buildings, equipment, track, and rolling stock in Chambersburg. In 1863, CVRR buildings, equipment, 
+            track, and bridges were attacked as far north as Mechanicsburg. Most of the rolling stock was moved 
+            in time. In 1864, Chambersburg was burned, affecting CVRR employees at all levels. In spite of all the 
+            damage, the CVRR came out of the war in much better financial position than at the beginning of the war.
+        </p>
+
+        <div class="row py-4 mx-auto">
+            <div class="mx-auto">
+                <div class="figure">
+                    <a href="../images/cvrr/station_with_train.jpg">
+                        <img src="../images/cvrr/station_with_train.jpg" alt="station with train #34 D13c" title="station with train #34 D13c">
+                    </a>
+                    <figcaption><i>station with train #34 D13c</i></figcaption>
+                </div>
+            </div>
+        </div>
+
+        <p class="paragraph-text">
+            Before the war, the only purpose built passenger station, other than the shared PRR station in Harrisburg, 
+            was in Chambersburg. After the war, the railroad went on a building spree, including the Mechanicsburg 
+            Stationmaster's House in 1866, and the Mechanicsburg Passenger Station in 1867. The CVRR procured enough 
+            freight cars to begin taking the freight business away from the forwarders. The first "Freight House" in 
+            Mechanicsburg was built in 1874, with the current freight station built about 1886.
+        </p>
+
+        <p class="paragraph-text">
+            Several companies built branch lines from the CVRR main line to serve iron mines and furnaces along South Mountain. 
+            Three of them failed financially, and were absorbed by the CVRR. This included the line to Dillsburg. 
+            After another national financial collapse in 1873, the CVRR built several parks along these lines, 
+            hoping to transport crowds of people to leisure and events at the parks. One of these was Williams 
+            Grove park, which later became the site of the annual Granger's Convention, drawing huge crowds from 
+            the eastern US.
+        </p>
+
+        <div class="row py-4 mx-auto">
+            <div class="mx-auto">
+                <div class="figure">
+                    <a href="../images/cvrr/IMG_0003.jpg">
+                        <img src="../images/cvrr/IMG_0003.jpg" alt="#9 B2" title="#9 B2">
+                    </a>
+                    <figcaption><i>#9 B2</i></figcaption>
+                </div>
+            </div>
+        </div>
+
+        <p class="paragraph-text">
+            By the late 1881, the CVRR was becoming more integrated with the PRR. Locomotives and cars were purchased to 
+            PRR specifications. Even passenger cars built in Chambersburg by the CVRR shops were built to PRR specifications. 
+            The PRR was buying additional CVRR stock, and it was apparent that a complete takeover was in the plans. In 1902, 
+            the CVRR became part of a PRR route to move coal from West Virginia to their dock in New Jersey serving the port of 
+            New York City. Passenger service was also extended into West Virginia. It is said that with these, in addition to 
+            normal business, trains passed through Mechanicsburg 24 times per day. There was as little as 20 minutes between 
+            some trains. With the smoke from the steam locomotives, and long, slow coal trains, this was extremely unpleasant 
+            for Cumberland Valley residents.
+        </p>
+
+        <p class="paragraph-text">
+            During World War I, operation of all US railroads was taken over by the US government. Still, the Pennsylvania 
+            Railroad completed its acquisition of the Cumberland Valley Railroad in 1919, and began to operate it in 1920, 
+            when control was returned to the owners. The Cumberland Valley Railroad became the Cumberland Valley Division of 
+            the Pennsylvania Railroad.
+        </p>
+
+        <div class="row py-4 mx-auto">
+            <div class="mx-auto">
+                <div class="figure">
+                    <a href="../images/cvrr/89.jpg">
+                        <img src="../images/cvrr/89.jpg" alt="#89 H6a" title="#89 H6a">
+                    </a>
+                    <figcaption><i>#89 H6a</i></figcaption>
+                </div>
+            </div>
+        </div>
+        
+
+      <!--Start History Bottom Text-->
+      <hr>
+      <h3 class="text-center">READ MORE</h3>
+      <div class="row">
+          <div class="col-sm-4 my-auto">
+              <div class="card">
+                  <img src="../images/history/history-fireco/hose_car.jpeg" class= "card-img-top" alt="Hose Car">
+                  <div class="card-body">
+                      <h5 class="card-title">Timelines and Lists</h5>
+                      <p class="card-text">Read about Mechanicsburg throughout the ages.</p>
+                      <a href="history/timeline.html" class="btn btn-primary">Visit Timelines and Lists</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-sm-4 my-auto">
+              <div class="card">
+                  <img src="../images/history/history-fountain/fountain_old.jpeg" class= "card-img-top" alt="Old Fountain">
+                  <div class="card-body">
+                      <h5 class="card-title">Articles</h5>
+                      <p class="card-text">Articles pertaining to Mechanicsburg and Cumberland Valley area.</p>
+                      <a href="history/articles.html" class="btn btn-primary my-2">Read Articles</a>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-sm-4 my-auto">
+              <div class="card">
+                  <img src="../images/history/history-fsresearch/1885.gif" class= "card-img-top" alt="Research Map">
+                  <div class="card-body">
+                      <h5 class="card-title">Maps</h5>
+                      <p class="card-text">Mechanicsburg has changed over the last 200 years. See maps back to the 1800s!</p>
+                      <a href="history/maps.html" class="btn btn-primary">See Maps</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+    <!--End History Bottom Text-->
 
     <!-- Footer -->
     <footer class="align-bottom">
