Timelines page populated

--- a/pages/history/articles.html
+++ b/pages/history/articles.html
@@ -226,7 +226,7 @@
                 </div>
             </div>
           </div>
-          <a href="#top" class="btn btn-secondary">Return to Top</a>
+          <a href="#top">Return to Top</a>
           <hr>
       </article>
 
@@ -312,7 +312,7 @@
           <p class="paragraph-text">Today, you can view the Public Fountain, minus the water supply, in the lawn behind the 
             Washington Fire Company on East Main Street. - Beverly J. Bone
           </p>
-          <a href="#top" class="btn btn-secondary">Return to Top</a>
+          <a href="#top">Return to Top</a>
           <hr>
       </article>
 
@@ -799,7 +799,7 @@
           it.
         </p>
 
-        <a href="#top" class="btn btn-secondary">Return to Top</a>
+        <a href="#top">Return to Top</a>
         <hr>
       </article>
 
@@ -966,7 +966,7 @@
           the corner of West Main and West Streets. Of course, with no definitive documentation found thus far, these 
           scenarios are simply conjecture on the part of the writer.</p>
         
-        <a href="#top" class="btn btn-secondary">Return to Top</a>
+          <a href="#top">Return to Top</a>
         <hr>
       </article>
 
@@ -1107,7 +1107,7 @@
 
         <p>6 March 1987 Drivecor Inc. deeded the property to Mechanicsburg Museum Assoc.</p>
         
-        <a href="#top" class="btn btn-secondary">Return to Top</a>
+        <a href="#top">Return to Top</a>
         <hr>
       </article>
 
