--- a/pages/history/cvrr.html
+++ b/pages/history/cvrr.html
@@ -80,7 +80,7 @@
     <div class="container-xl py-2">
 
         <!--Please insert content here ONLY!-->
-        <h2 class="text-center py-5">~ THE CUMBERLAND VALLEY RAILROAD & MECHANICSBURG ~</h2>
+        <h2 class="text-center py-5" id="top">~ THE CUMBERLAND VALLEY RAILROAD & MECHANICSBURG ~</h2>
 
         <div class="row py-4 mx-auto">
             <div class="col-lg-12">
@@ -266,6 +266,8 @@
                 </div>
             </div>
         </div>
+
+        <a href="#top">Return to Top</a>
         
 
       <!--Start History Bottom Text-->
