Minor changes Paul requested

--- a/pages/history/timeline.html
+++ b/pages/history/timeline.html
@@ -368,7 +368,7 @@
                   <div class="card-body">
                       <h5 class="card-title">Timelines and Lists</h5>
                       <p class="card-text">Read about Mechanicsburg throughout the ages.</p>
-                      <a href="timeline.html" class="btn btn-primary">Visit Timelines and Lists</a>
+                      <a href="timeline.html" class="btn btn-primary">Timeline and Facts</a>
                   </div>
               </div>
           </div>
