updated Read More section and added maps page

--- a/pages/history/articles.html
+++ b/pages/history/articles.html
@@ -1112,51 +1112,53 @@
       </article>
 
       <!--Start History Bottom Text-->
+      <hr class="dashed">
       <h3 class="text-center">READ MORE</h3>
       <div class="row">
-        <div class="col-sm-3 my-auto">
-            <div class="card">
-                <img src="../../images/history/history-fireco/hose_car.jpeg" class= "card-img-top" alt="Hose Car">
-                <div class="card-body">
-                    <h5 class="card-title">Timelines and Lists</h5>
-                    <p class="card-text">Read about Mechanicsburg throughout the ages.</p>
-                    <a href="timeline.html" class="btn btn-primary">Timeline and Facts</a>
-                </div>
-            </div>
-        </div>
+          <div class="col-sm-3 my-auto">
+              <div class="card">
+                  <img src="../../images/history/history-fireco/hose_car.jpeg" class= "card-img-top" alt="Hose Car">
+                  <div class="card-body">
+                      <h5 class="card-title">Timelines and Lists</h5>
+                      <p class="card-text">Read about Mechanicsburg throughout the ages.</p>
+                      <a href="timeline.html" class="btn btn-primary">Timeline and Facts</a>
+                  </div>
+              </div>
+          </div>
 
-        <div class="col-sm-3 my-auto">
+          <div class="col-sm-3 my-auto">
             <div class="card">
                 <img src="../../images/history/history-fountain/fountain_old.jpeg" class= "card-img-top" alt="Old Fountain">
                 <div class="card-body">
                     <h5 class="card-title">Articles</h5>
-                    <p class="card-text">Articles pertaining to Mechanicsburg and Cumberland Valley area.</p>
-                    <a href="articles.html" class="btn btn-primary my-2">Read Articles</a>
+                    <p class="card-text">Articles pertaining to Mechanicsburg</p>
+                    <a href="articles.html" class="btn btn-primary">Read Articles</a>
                 </div>
             </div>
-        </div>
+          </div>
 
-        <div class="col-sm-3 my-auto">
-            <div class="card">
-                <img src="../../images/history/history-fsresearch/1885.gif" class= "card-img-top" alt="Research Map">
-                <div class="card-body">
-                    <h5 class="card-title">Maps</h5>
-                    <p class="card-text">Mechanicsburg has changed over the last 200 years. See maps back to the 1800s!</p>
-                    <a href="maps.html" class="btn btn-primary">See Maps</a>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-3 my-auto">
-          <div class="card">
-              <img src="../../images/cvrr/station_with_train.jpg" class= "card-img-top" alt="Station with Train">
-              <div class="card-body">
-                  <h5 class="card-title">CVRR</h5>
-                  <p class="card-text">Learn about the Cumberland Valley Railroad!</p>
-                  <a href="cvrr.html" class="btn btn-primary">CVRR</a>
+          <div class="col-sm-3 my-auto">
+              <div class="card">
+                  <img src="../../images/history/history-fsresearch/1885.gif" class= "card-img-top" alt="Research Map">
+                  <div class="card-body">
+                      <h5 class="card-title">Maps</h5>
+                      <p class="card-text">See maps of Mechanicsburg dating back to the 1800s!</p>
+                      <a href="maps.html" class="btn btn-primary">See Maps</a>
+                  </div>
               </div>
           </div>
-        </div>
+
+          <div class="col-sm-3 my-auto">
+            <div class="card">
+                <img src="../../images/cvrr/station_with_train.jpg" class= "card-img-top" alt="Station with Train">
+                <div class="card-body">
+                    <h5 class="card-title">CVRR</h5>
+                    <p class="card-text">Learn about the Cumberland Valley Railroad!</p>
+                    <a href="cvrr.html" class="btn btn-primary">CVRR</a>
+                </div>
+            </div>
+          </div>
+      </div>
       </div>
     <!--End History Bottom Text-->
     </div>
