--- a/pages/history/timeline.html
+++ b/pages/history/timeline.html
@@ -374,14 +374,14 @@
           </div>
 
           <div class="col-sm-3 my-auto">
-              <div class="card">
-                  <img src="../../images/history/history-fountain/fountain_old.jpeg" class= "card-img-top" alt="Old Fountain">
-                  <div class="card-body">
-                      <h5 class="card-title">Articles</h5>
-                      <p class="card-text">Articles pertaining to Mechanicsburg and Cumberland Valley area.</p>
-                      <a href="articles.html" class="btn btn-primary my-2">Read Articles</a>
-                  </div>
-              </div>
+            <div class="card">
+                <img src="../../images/history/history-fountain/fountain_old.jpeg" class= "card-img-top" alt="Old Fountain">
+                <div class="card-body">
+                    <h5 class="card-title">Articles</h5>
+                    <p class="card-text">Articles pertaining to Mechanicsburg</p>
+                    <a href="articles.html" class="btn btn-primary">Read Articles</a>
+                </div>
+            </div>
           </div>
 
           <div class="col-sm-3 my-auto">
@@ -389,7 +389,7 @@
                   <img src="../../images/history/history-fsresearch/1885.gif" class= "card-img-top" alt="Research Map">
                   <div class="card-body">
                       <h5 class="card-title">Maps</h5>
-                      <p class="card-text">Mechanicsburg has changed over the last 200 years. See maps back to the 1800s!</p>
+                      <p class="card-text">See maps of Mechanicsburg dating back to the 1800s!</p>
                       <a href="maps.html" class="btn btn-primary">See Maps</a>
                   </div>
               </div>
