--- a/pages/join.html
+++ b/pages/join.html
@@ -14,7 +14,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/60213d849e.js" crossorigin="anonymous"></script>
 
-    <title>Home</title>
+    <title>Join Us</title>
   </head>
 
   <body>
@@ -81,11 +81,71 @@
 
     <!-- Parent Container-->
     <div class="container-xl py-2">
-
-        <!--Please insert content here ONLY!-->
-
-    </div>
-
+      <div class="container">
+      <div class="row">
+         <div class="col-sm">
+           <img src="..\images\joinus\tour_sm.jpg" alt="tour" class="joinpics">
+           <img src="..\images\joinus\christmas_exhibit.jpg" alt="Christmas exhibit" class="joinpics">
+           <img src="..\images\joinus\annual_dinner.jpg" alt="dinner" class="joinpics">
+           <img src="..\images\joinus\sale.jpg" alt="sale" class="joinpics">
+          <img src="..\images\joinus\golf.jpg" alt="golf" class="joinpics">
+          <img src="..\images\joinus\judges2.jpg" alt="pie judging" class="joinpics">
+         </div>
+         <div class="col-lg">
+                 <h1>Join Us</h1>
+                 <hr>
+                 <p>Members of the Mechanicsburg Museum Association are "Keeping our History Alive." The financial support of our members is key to lighting, heating, air conditioning and maintaining our five properties, and preserving and exhibiting historical items. Benefits of membership include our newsletters, and free admission to both of our lecture series.</p>
+                 <a href="memberform.html">Membership Form</a>
+                 <hr>
+                 <h3>Benefits of Membership</h3>
+                 <p>By far the biggest benefit of membership is the opportunity to join our corps of volunteers. The wide range of opportunities has something for almost anyone. Meet interesting people working in teams, or work alone on "backroom" projects. Meet the public, or work behind the scenes. Work as a leader or a follower.  Do one thing, or many things. Some of us work one three hour shift per month as docents in our buildings, while for others, the museum is a second home. Try whatever interests you. If it turns out to be wrong for you, there is no pressure to continue. Go ahead and try something else. Training is provided where appropriate. Areas of interest include:</p>
+          <h4>Docents </h4>
+          <p> Tour guides for the Stationmaster's House, Passenger and Freight Stations, and the Frankenberger Tavern. This can be one three hour shift per month or more. You agree to your assignment the month before, and can change with another docent if necessary.</p>
+          <h4>Educational Program</h4>
+          <p>Volunteers guide 4th grade classes as docents in several buildings for morning sessions during Spring and Fall.</p>
+          <h4>Exhibits</h4>
+          <p>Planning, setting up, and dismantling three exhibits per year in the Freight Station. Responsible for exhibits in the Passenger Station.</p>
+          <h4>Social Events</h4>
+          <p>Planning and setting up events such as the annual membership dinner and the volunteers' "thank you" event.</p>
+          <h4>Acquisitions</h4>
+          <p>Cataloging and storing our "treasures." This is very flexible for time and hours.</p>
+          <h4>Oral History</h4>
+          <p>Helping to interview residents of Mechanicsburg. Transcribing the oral history.</p>
+          <h4>Newsletter</h4>
+          <p>Assist in the assembly of the newsletter for mailing</p>
+          <h4>Hospitality/Hostess</h4>
+          <p> On occasion, help is needed with receptions for exhibit openings and programs to plan and serve at the events.</p>
+          <h4>Custodial Maintenance</h4>
+          <p>Involves spring-cleaning of the above buildings and fulfilling the light, routine house cleaning chores throughout the year.</p>
+          <h4>Maintenance</h4>
+          <p>Helping with small carpentry, electrical or plumbing projects.  Changing light bulbs.</p>
+          <h4>Jubilee Day</h4>
+          <p>Helping hands needed for activities at various buildings</p>
+          <h4>Fund Raising</h4>
+          <p>Finding ways to finance our operations and activities. Includes special events</p>
+          <h4>Earth Day</h4>
+          <p>Helping to plan the event and working the day of the event</p>
+          <h4>Heritage Golf Tournament</h4>
+          <p>Helping to plan the event and working the day of the tournament, held in May.</p>
+          <h4>Sunflower Garden Tour</h4>
+          <p>Planning and preparing the tour, and recruiting suitable gardens. This is the main work involved. Greeting participants as a host/hostess. Relaxing and soaking up sun. A nice, low pressure job.</p>
+          <h4> Christmas Wreath Sale </h4>
+          <p>Making bows (prior to the event), attaching bows to wreaths, bundling orders, and assisting with order pickup. A fun group event.</p>
+          <h4>Jubilee Day Pie Contest</h4>
+          <p>Organizing, setting up, and registering contestants. Tasting and judging pies.  Announcing winners.</p>
+          <h4>Christmas Gingerbread House Contest</h4>
+          <p>Organizing, setting up, and registering contestants. Counting votes. Notifying winners.</p>
+          <h4>Sidewalk Sale</h4>
+          <p>Putting up, selling, taking down</p>
+          <h4>Board of Directors</h4>
+          <p>An opportunity to help direct the activities of the Museum; an involved, challenging leadership role.</p>
+          <h4>Volunteer Consultant</h4>
+          <p>If you have special skills that may be of use to us on occasion, let us know.</p>
+          <a href="memberform.html">Membership Form</a>
+         </div>
+       </div>
+     </div>
+  </div>
     <!-- Footer -->
     <footer class="align-bottom">
         <div class="container-fluid footer-class py-4">
