--- a/pages/links.html
+++ b/pages/links.html
@@ -14,7 +14,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/60213d849e.js" crossorigin="anonymous"></script>
 
-    <title>Home</title>
+    <title>Links</title>
   </head>
 
   <body>
@@ -80,9 +80,38 @@
 
     <!-- Parent Container-->
     <div class="container-xl py-2">
-
-        <!--Please insert content here ONLY!-->
-
+      <h1>Links</h1>
+      <hr>
+      <h2>Local History: Resources and Attractions</h2>
+      <br>
+      <ul>
+        <li><a href="https://www.cumberlandcountylibraries.org/SIM" target="_blank">Joseph T. Simpson Public Library</a> 0.4 miles Local history books and atlases in a historic 1800s warehouse</li>
+        <li><a href="http://www.s-townhs.org/" target="_blank">Shiremanstown Historical Society</a> 3.2 miles Library and museum open by appointment</li>
+        <li><a href="https://westshorehistoricalsociety.com/" target="_blank">West Shore Historical Society </a>7 miles Collection of historical photos and artifacts</li>
+        <li><a href="https://northernyorkhistorical.org/" target="_blank">Dill’s Tavern and Plantation </a> 8 miles Late 1700s tavern and property</li>
+        <li><a href="http://statemuseumpa.org/"  target="_blank"> The State Museum of Pennsylvania</a>8 miles Pennsylvania, from dinosaurs to airplanes</li>
+        <li><a href="https://pnfm.org/" target="_blank">Pennsylvania National Fire Museum </a> 8.7 miles Fire fighting museum in historic 1899 fire station</li>
+        <li><a href="https://www.armyheritage.org/" target="_blank">U.S. Army Heritage and Education Center,Carlisle </a>  8.8 miles Museum and research center</li>
+        <li><a href="https://www.historicalsociety.com/" target="_blank">Cumberland County Historical Society </a> 10 miles Library, museum, and lots of activities</li>
+        <li><a href="https://emmr.org/" target="_blank">Eastern Museum of Motor Racing </a> 15 miles Historic race cars</li>
+        <li><a href="https://forthunter.org/" target="_blank">Fort Hunter </a> 16 miles Historic mansion, buildings, and park</li>
+        <li><a href="https://www.hersheyhistory.org/" target="_blank">Hershey History Center </a> 21 miles Hershey area history</li>
+        <li><a href="https://www.aacamuseum.org/" target="_blank">AACA Museum Hershey </a>  Antique autos, trucks, buses, interpretive displays, and research library</li>
+        <li><a href="http://www.yorkhistorycenter.org/" target="_blank">York County Heritage Trust, York </a> 26 miles Several museums and historical buildings</li>
+        <li><a href="https://www.dcnr.pa.gov/StateParks/FindAPark/PineGroveFurnaceStatePark/Pages/default.aspx" target="_blank">Pine Grove Furnace </a>  29 miles Historic iron furnace buildings and Appalachian Trail Museum, as well as recreational activities</li>
+      </ul>
+      <h2>Railroad Attractions</h2>
+      <ul>
+      <li><a href="https://www.wghsea.org/" target="_blank">Williams Grove Historical Steam Engine Association </a> 6 miles Ride a train, operate a real locomotive, and more</li>
+      <li><a href="https://rrmuseumpa.org/" target="_blank">State Railroad Museum of Pennsylvania, Strasburg </a> 56 miles Historic railroad equipment from Pennsylvania and interpretive displays</li>
+      <li><a href="https://www.strasburgrailroad.com/" target="_blank">Strasburg Railroad </a> 56 miles Train rides through Pennsylvania Dutch Country</li>
+      <li><a href="http://www.borail.org/" target="_blank">B&O Railroad Museum, Baltimore </a>  83 miles Historic railroad equipment, interpretive displays, and train rides in an old B&O Railroad yard</li>
+      <li><a href="https://www.nps.gov/stea/index.htm" target="_blank">Steamtown, Scranton</a> 135 miles Historic railroad equipment, interpretive displays, and train rides in an old Lakawanna Railroad yard</li>
+    </ul>
+    <h2>Other Area Attractions, Events, Food, Lodging</h2>
+    <ul>
+      <li><a href="https://www.visitcumberlandvalley.com/" target="_blank">Cumberland Valley Visitors Bureau </a> </li>
+    </ul>
     </div>
 
     <!-- Footer -->
